--- a/config/locales/gems/routes/en.yml
+++ b/config/locales/gems/routes/en.yml
@@ -2,9 +2,21 @@ en:
   routes:
     offers: "offers"
     users: "users"
-    contacts: "contacts"
+    contacts: "contact"
     organizations: "organizations"
     impressum: "site-notice"
     haeufige-fragen: "frequently-asked-questions"
     ueber-uns: "about-us"
     faq: "frequently-asked-questions"
+    '404': "404"
+    datenschutzhinweise: "privacy"
+    rechtliche-hinweise: "legal-information"
+    definitions: "definitions"
+    emails: "emails"
+    new: "new"
+    preview: "preview"
+    search_locations: "search_locations"
+    subscribe: "subscribe"
+    subscriptions: "subscriptions"
+    unsubscribe: "unsubscribe"
+    update_requests: "update_requests"
