for #768 - fix wrong translated section_forward

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -527,7 +527,7 @@ ar:
       all_categories: "جميع الفئات"
     cookie_warning_html: |-
       الكوكيز تساعدنا على أن تظل صفحتنا متوفرة. من خلال استخدامك للصفحة فأنت تبين تفهمك لأننا وضعنا كوكيز
-      <a href="/إرشادات-حماية-البيانات-الشخصية">Mehr</a>.
+      <a href="/ar/refugees/إرشادات-حماية-البيانات-الشخصية">Mehr</a>
     geolocation:
       error: "لم يتم العثور على موقع، من فضلك أدخل اسم الموقع ذاتيا."
       get: "استخدم موقعي !"
