--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -649,7 +649,7 @@ ru:
     cookie_warning_html: |-
       Cookies помогают нам в создании этой страницы. Пользуясь этой страницей
       вы соглашается с использованием нами Cookies.
-      <a href="/Правила-конфиденциальности">Далее</a>.
+      <a href="/ru/refugees/Правила-конфиденциальности">Далее</a>.
     geolocation:
       error: "Местонахождение не найдено. Пожалуйста введи сам."
       get: "Использовать мое местонахождения!"
